apps/cloudcart/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: cloudcart-dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: roshan033/cloudcart-frontend:build-20

          imagePullPolicy: Always

          ports:
            - containerPort: 3000
            
      resources:
        requests:
          cpu: 100m
          memory: 128Mi

        limits:
          cpu: 300m
          memory: 256Mi
