apps/cloudcart/frontend/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: cloudcart-dev

spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - port: 3000
      targetPort: 3000
